More JUnit tests (incl. small bug fixes). Improved code style and JavaDoc.