@@ -60,7 +60,7 @@ public class WebSymbolIT {
         assertEquals(Status.CREATED.getStatusCode(), response.getStatus());
         Symbol symbol = response.readEntity(Symbol.class);
         assertTrue(project.getId() > 0);
-        assertEquals(new Long(1), symbol.getRevision());
+        assertEquals(Long.valueOf(1), symbol.getRevision());
         assertEquals(symbolName, symbol.getName());
         assertEquals(symbolAbbr, symbol.getAbbreviation());
         assertNotNull(symbol.getActions());
